Bug 272481 - Muon Software Center crash when try install many package
Summary: Muon Software Center crash when try install many package
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 1.1.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 272780 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-04 22:52 UTC by Rodolfo
Modified: 2011-05-24 22:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rodolfo 2011-05-04 22:52:24 UTC
Application: muon-installer (1.1.2 "Bullish Bandril")
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
When muon install the selected package, if I select install for another package, crash

The crash can be reproduced some of the time.

-- Backtrace:
Application: Muon Software Center (muon-installer), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f0cbe4b7780 (LWP 12398))]

Thread 2 (Thread 0x7f0caabba700 (LWP 12399)):
#0  0x00007fff975e8861 in clock_gettime ()
#1  0x00007f0cb7135146 in clock_gettime () from /lib/x86_64-linux-gnu/librt.so.1
#2  0x00007f0cbc0b7304 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f0cbc178e3d in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f0cbc1791a5 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f0cbc177c2c in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f0cbc177cd5 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f0cb6e840a2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f0cb6e84f9d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f0cb6e85639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f0cbc178446 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0x00007f0cbc14c882 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f0cbc14cabc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f0cbc063924 in QThread::exec() () from /usr/lib/libQtCore.so.4
#14 0x00007f0cbc12ec2f in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007f0cbc066175 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f0cb88d2d8c in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#17 0x00007f0cba6ae04d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f0cbe4b7780 (LWP 12398)):
[KCrash Handler]
#6  Transaction::application (this=0x1) at /build/buildd/muon-1.1.2/installer/Transaction.cpp:49
#7  0x000000000042c355 in ApplicationDetailsWidget::workerEvent (this=0x1ec2eb0, event=QApt::CommitChangesFinished, transaction=0x1) at /build/buildd/muon-1.1.2/installer/ApplicationDetailsView/ApplicationDetailsWidget.cpp:373
#8  0x000000000042e11b in ApplicationDetailsWidget::qt_metacall (this=0x1ec2eb0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9756b730) at /build/buildd/muon-1.1.2/obj-x86_64-linux-gnu/installer/ApplicationDetailsWidget.moc:120
#9  0x00007f0cbc1625f8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0x000000000041ae9c in ApplicationBackend::workerEvent (this=<value optimized out>, _t1=QApt::CommitChangesFinished, _t2=0x1) at /build/buildd/muon-1.1.2/obj-x86_64-linux-gnu/installer/moc_ApplicationBackend.cpp:151
#11 0x000000000041fcdb in ApplicationBackend::workerEvent (this=0x1807300, event=QApt::CommitChangesFinished) at /build/buildd/muon-1.1.2/installer/ApplicationBackend.cpp:146
#12 0x000000000041b19b in ApplicationBackend::qt_metacall (this=0x1807300, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9756b890) at /build/buildd/muon-1.1.2/obj-x86_64-linux-gnu/installer/moc_ApplicationBackend.cpp:116
#13 0x00007f0cbc1625f8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#14 0x00007f0cbd9dc5c1 in QApt::Backend::workerEvent (this=<value optimized out>, _t1=QApt::CommitChangesFinished) at /build/buildd/qapt-1.1.2/obj-x86_64-linux-gnu/src/moc_backend.cxx:222
#15 0x00007f0cbd9dc7ec in QApt::Backend::qt_metacall (this=0x18088b0, _c=QMetaObject::InvokeMetaMethod, _id=34, _a=0x7fff9756b9a0) at /build/buildd/qapt-1.1.2/obj-x86_64-linux-gnu/src/moc_backend.cxx:182
#16 0x00007f0cbc1625f8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#17 0x00007f0cbd9dd0e1 in OrgKubuntuQaptworkerInterface::workerEvent (this=<value optimized out>, _t1=6) at /build/buildd/qapt-1.1.2/obj-x86_64-linux-gnu/src/workerdbus.moc:201
#18 0x00007f0cbd9dd56e in OrgKubuntuQaptworkerInterface::qt_metacall (this=0x1695970, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff9756bda0) at /build/buildd/qapt-1.1.2/obj-x86_64-linux-gnu/src/workerdbus.moc:119
#19 0x00007f0cbc4a29fa in ?? () from /usr/lib/libQtDBus.so.4
#20 0x00007f0cbc4ace4f in ?? () from /usr/lib/libQtDBus.so.4
#21 0x00007f0cbc16149a in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#22 0x00007f0cbb50e9e4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#23 0x00007f0cbb5133aa in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#24 0x00007f0cbce05866 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#25 0x00007f0cbc14d49c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#26 0x00007f0cbc150c25 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#27 0x00007f0cbc178253 in ?? () from /usr/lib/libQtCore.so.4
#28 0x00007f0cb6e84bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f0cb6e853a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f0cb6e85639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f0cbc1783ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f0cbb5b5dfe in ?? () from /usr/lib/libQtGui.so.4
#33 0x00007f0cbc14c882 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0x00007f0cbc14cabc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#35 0x00007f0cbc150ecb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#36 0x000000000041b6b0 in main (argc=5, argv=<value optimized out>) at /build/buildd/muon-1.1.2/installer/main.cpp:60

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-05-24 22:14:10 UTC
*** Bug 272780 has been marked as a duplicate of this bug. ***
Comment 2 Jonathan Thomas 2011-05-24 22:36:56 UTC
Git commit 2b1741b4e6e1ea82814df1728729b202c3139e3a by Jonathan Thomas.
Committed on 24/05/2011 at 22:36.
Pushed by jmthomas into branch 'master'.

Don't handle events from orphaned transactions

BUG:272481

M  +2    -1    installer/ApplicationDetailsView/ApplicationDetailsWidget.cpp     

http://commits.kde.org/muon/2b1741b4e6e1ea82814df1728729b202c3139e3a