Don't handle events from orphaned transactions

BUG:272481